--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 __pycache__
+/target
+/dist
+**/*.rs.bk
+Cargo.lock
+bin/
+pkg/
+wasm-pack.log
+worker/
+node_modules/
+.cargo-ok
+/__target__
+/env
